--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,14 +4,14 @@
   padding: 0;
 }
 
-body {
-  /* background-color: #fefae0; */
-}
-
 ul {
   list-style: none;
 }
 
 a {
   text-decoration: none;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
 }
